tests/NormalTests/paczka1/small_fuzzy/38746209.err
Error in line 2: Am8 A77m m7,1
Error in line 1: d4PKuO5 A773 56,9
Error in line 12: SMae33PTqa S50 73,0
